--- a/Curso 2/leilao/pom.xml
+++ b/Curso 2/leilao/pom.xml
@@ -14,6 +14,13 @@
 	<dependencies>
 	
 		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest</artifactId>
+			<version>2.1</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
 			<version>5.5.1</version>
